1.干货tab 页面基础编写 2.录屏测试代码 3.集成x5内核 webview 详情页面

--- a/BombPlus/app/build.gradle
+++ b/BombPlus/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     implementation 'cn.bingoogolapple:bga-banner:2.2.4@aar'
     // 视屏播放器
     implementation 'com.shuyu:GSYVideoPlayer:7.1.5'
+
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
