--- a/BombPlus/app/build.gradle
+++ b/BombPlus/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -20,6 +19,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = "1.8"
     }
 }
 
@@ -47,4 +50,18 @@ dependencies {
     implementation 'com.shuyu:GSYVideoPlayer:7.1.5'
 
     implementation 'org.greenrobot:eventbus:3.1.1'
+
+
+    def room_version = "2.2.5"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    // use kapt for Kotlin
+    kapt  "android.arch.persistence.room:compiler:$room_version"
+
+    implementation "androidx.room:room-ktx:$room_version"
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 }
