--- a/BombPlus/app/build.gradle
+++ b/BombPlus/app/build.gradle
@@ -100,10 +100,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -124,7 +125,7 @@ dependencies {
 
 
     //room
-    def room_version = "2.2.5"
+    def room_version = "2.3.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     // use kapt for Kotlin
@@ -141,9 +142,19 @@ dependencies {
     //gif
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
+    //   implementation 'androidx.paging:paging-runtime:3.0.0-beta01'
+
+    def paging_version = "3.0.0"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
 }
 
 //获取时间
 static def releaseTime() {
     return new Date().format("yyyy-MM-dd-HH-mm-ss", TimeZone.getTimeZone("GMT+08:00"))
+
+
+
+
 }
